Bug 80800 - DOCX : Preservation : Paragraph line spacing inside table is not getting preserved
Summary: DOCX : Preservation : Paragraph line spacing inside table is not getting pres...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-02 10:20 UTC by pallavi.jadhav
Modified: 2014-07-20 15:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Contains text inside table (103.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-02 10:20 UTC, pallavi.jadhav
Details
Comparison between Original and RT file (193.22 KB, image/png)
2014-07-02 10:21 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-07-02 10:20:11 UTC
Created attachment 102126 [details]
Contains text inside table

Steps to reproduce :
1] Open attached file in LO
2] Perform save_as to DOCX
3] Open saved file in MS Office-2010

Current behavior :
Paragraph line spacing inside table changes from "1.5 lines" to "single"

Expected behavior :
Paragraph line spacing inside table should be "1.5 lines"
Comment 1 pallavi.jadhav 2014-07-02 10:21:26 UTC
Created attachment 102127 [details]
Comparison between Original and RT file
Comment 2 Kevin Suo 2014-07-04 01:11:06 UTC
set back to unconfirmed.
new reported bug should be confirmed by someone else before set to new.
Comment 3 Jorendc 2014-07-04 07:53:09 UTC
(In reply to comment #2)
> set back to unconfirmed.
> new reported bug should be confirmed by someone else before set to new.

No need to set back to UNCONFIRMED. As you can see in the history https://bugs.freedesktop.org/show_activity.cgi?id=80800 I did set it to NEW. Synerzip reports only bugs to keep track of them and to fix the bugs themselves. So no need to triage this one, unless they state otherwise.

Kind regards,
Joren
Comment 4 Commit Notification 2014-07-18 08:07:23 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a5f9fb720daeb2df8325768b98b8b720abcc2b9b

fdo#80800 : DOCX: Preservation of Direct Formatting for non first Table Cells



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-07-20 15:21:06 UTC
Looks fixed to me, tested using Windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: a82ff18269e5b37348d402b7c21c3f200068265c
TinderBox: Win-x86@39, Branch:master, Time: 2014-07-20_02:34:36

Thanks!

Kind regards,
Joren