fdo#80800 : DOCX: Preservation of Direct Formatting for non first Table Cells

Issue :
	- Direct Formatting for non-first Table cells was not getting preserved.
	- In issue file, a table with multiple cells have Line Sapcing = 1.5 lines.
	  But LO was importing only First Table cell with Line Spacing = 1.5 lines
	  whereas for remaining cells LO was applying Line Spacing = Single.
	  LO was overriding value from styles.xml
	- Issue was due to at line : http://opengrok.libreoffice.org/xref/core/writerfilter/source/dmapper/DomainMapper.cxx#399
	  here LO sets only a boolean value for all cells and
	  here : http://opengrok.libreoffice.org/xref/core/writerfilter/source/dmapper/DomainMapperTableHandler.cxx#769
          we set DirectFormatting to False.
	  So we have processed only one cell, hence for remaining cells Direct Formatting is not getting applied.
	- So in order to have Direct Formatting for multiple Table Cells, we need to preserve Direct Fomatting property
	  for respective cells.
	  And with present code structure it is not happening as there is only a bool variable we are considering.

	Implementation :
	- Saved Direct Formatting information in DomainMapper itself.
	- Hence when DomainMapperTableHandler::endTableGetCellProperties() gets called,
	  Table cells already have correct value stored in it.
	  We no more need to erase Default Formatting as Default formatting is not
	  present instead it's actual values are now available.
        - This has conditionally reverted : https://gerrit.libreoffice.org/#/c/9560/

Change-Id: Ie1c82069cd84e9662f33e734bda3ef69c5169e83
Reviewed-on: https://gerrit.libreoffice.org/10216
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>